[package]
name = "brave_proton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["env"] }
env_logger = "0.9.0"
log = "0.4"
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_24"] }
kube = { version = "0.74.0", default-features = true, features = ["derive", "runtime"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
cloudflare = "0.9.1"
anyhow = "1.0.62"
