[package]
name = "brave_proton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
kube = { version = "0.74.0", default-features = true, features = ["derive", "runtime"] }
log = "0.4.17"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "3", features = ["env"] }
futures-util = "0.3"
